Suggestions and search result configured

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script>
     // set up autocomplete
     $("#st-search-input").swiftype({
-      engineKey: "5jZG1gmmCTFYbSSDjpqq"
+      engineKey: "T6stQ2m7sf88bS7x75Vk"
     });
 
     // redirect form to results page with #stq hash parameter
