--- a/results.html
+++ b/results.html
@@ -33,7 +33,7 @@
 
     // set up search
     $("#st-search-input").swiftypeSearch({
-      engineKey: "5jZG1gmmCTFYbSSDjpqq",
+      engineKey: "T6stQ2m7sf88bS7x75Vk",
       resultContainingElement: "#st-results-container"
     });
     </script>
