--- a/results.html
+++ b/results.html
@@ -28,7 +28,7 @@
     <script>
     // set up autocomplete
     $("#st-search-input").swiftype({
-      engineKey: "5jZG1gmmCTFYbSSDjpqq"
+      engineKey: "T6stQ2m7sf88bS7x75Vk"
     });
 
     // set up search
