--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!doctype html>
 <html>
   <head>
-    <title>Knowledge base links search</title>
+    <title>Knowledge base</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="jquery.swiftype.autocomplete.js"></script>
     <link rel="stylesheet" type="text/css" href="autocomplete.css"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,300,300italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
 
   <body>
     <div id="searchboxContainer">
       <div id="searchbox">
-        <h1>Knowledge base links search</h1>
+        <img id="brain_geo" src="brain_geo.png" alt="brain_geo">
+        <h2 id="logo">knowledge base</h2>
         <form id="search-form">
-          <input type="text" id="st-search-input">
-          <button type="submit">Search</button>
+          <!-- <input type="text" id="st-search-input">
+          <button type="submit">Search</button> -->
+          <input class="search-input" id="st-search-input" type="text" placeholder="Search for anything"/>
         </form>
         <script>
           // set up autocomplete
@@ -33,5 +37,6 @@
         </script>
       </div>
     </div>
+    <img src="taqtile-horizontal.png" id="taqtile-logo"/>
   </body>
 </html>
