--- a/results.html
+++ b/results.html
@@ -16,12 +16,14 @@
   </head>
 
   <body>
-    <h1>Swiftype Search Results</h1>
-
-    <form id="search-form">
-      <input type="text" id="st-search-input">
-      <button type="submit">Search</button>
-    </form>
+    <div id="header-fixed">
+      <form id="search-form">
+          <!-- <input type="text" id="st-search-input">
+          <button type="submit">Search</button> -->
+          <img id="st-search-input-icon" src="brain_geo_pto.png" />
+          <input class="search-input" id="st-search-input" type="text" placeholder="Search for anything"/>
+        </form>
+    </div>
 
     <div id="st-results-container"></div>
 
