Added link to home

--- a/results.html
+++ b/results.html
@@ -20,7 +20,9 @@
       <form id="search-form">
           <!-- <input type="text" id="st-search-input">
           <button type="submit">Search</button> -->
-          <img id="st-search-input-icon" src="brain_geo_pto.png" />
+          <a href="index.html" id="brain_geo_link">
+            <img id="st-search-input-icon" src="brain_geo_pto.png" />
+          </a>
           <input class="search-input" id="st-search-input" type="text" placeholder="Search for anything"/>
         </form>
     </div>
